# pharma_dbms_project

./: main.py  pyproject.toml  requirements.txt
models/: db.py  models.py  rating.py
static/css/: signup.css  styles.css
templates/: about.html  cart.html  contact.html  header.html  index.html  login.html  navbar.html  products.html  signup.html
